use org.dreamcorps.lms for the package name

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">hackathon_us_canada</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Hello world!!</string>
     <string name="action_settings">Settings</string>
 
 </resources>
