add gitignore, pager view, image caching

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">hackathon_us_canada</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="bookcover_pager">Book Cover Pager</string>
 
 </resources>
