--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,7 +3,11 @@
 
     <string name="app_name">hackathon_us_canada</string>
     <string name="hello_world">Hello world!!</string>
+    
     <string name="action_settings">Settings</string>
+    <string name="action_add">Add Book</string>
+    <string name="action_search">Search</string>
+
     <string name="bookcover_pager">Book Cover Pager</string>
     <string name="book_listview">Book List</string>
 
