hook up UI to "syncer": request book info from Douban API and store result in db

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="bookcover_pager">Book Cover Pager</string>
     <string name="book_listview">Book List</string>
 
+    <string name="dreamcorps_authority">org.dreamcorps.content</string>
 </resources>
