--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <string name="app_name">梦想图书馆</string>
+    <string name="app_name">梦想图书室</string>
     <string name="hello_world">Hello world!!</string>
     
     <string name="action_settings">Settings</string>
     <string name="action_add">Add Book</string>
     <string name="action_search">Search</string>
 
-    <string name="bookcover_pager">Book Cover Pager</string>
-    <string name="book_listview">Book List</string>
+    <string name="bookcover_pager">图书详情</string>
+    <string name="book_listview">藏书一览</string>
 
     <string name="dreamcorps_authority">org.dreamcorps.content</string>
 </resources>
